# bubblehearth

./: .env  .env.example  .pre-commit-config.yaml  Cargo.toml  README.md  justfile
examples/: with_axum.rs  with_simple_client.rs
src/: auth.rs  auth_context.rs  builder.rs  client.rs  connectors.rs  documents.rs  errors.rs  lib.rs  localization.rs  oauth.rs  regionality.rs  search.rs  timezone.rs
src/classic/: client.rs  mod.rs  realms.rs  regions.rs
src/hearthstone/: card_search.rs  cards.rs  mod.rs
src/http/: builder.rs  mod.rs  reqwest.rs
src/oauth/: bnet.rs  endpoints.rs  mod.rs  scopes.rs
tests/: classic_realm_tests.rs  classic_region_tests.rs  client_credentials_auth_tests.rs  hearthstone_cards_tests.rs
