[package]
name = "bubblehearth"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/bubblehearth"
homepage = "https://github.com/joeymckenzie/bubblehearth/"
repository = "https://github.com/joeymckenzie/bubblehearth/"
authors = ["Joey McKenzie <joey.mckenzie27@gmail.com>"]
keywords = ["blizzard", "blizzard-api", "blizzard-game-data"]
categories = ["api-bindings"]
readme = "README.md"
description = "Blizzard Game Data API bindings for Rust."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["multipart", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1"
tracing-subscriber = "0.3"
anyhow = "1.0"
time = "0.3"
http = "0.2"
void = "1.0"

[dev-dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
axum = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[example]]
name = "simple"
path = "examples/with_simple_client.rs"

[[example]]
name = "axum"
path = "examples/with_axum.rs"
